# feathers-and-glass

./: .gitignore  CNAME  Cargo.toml  index.html
raws/: spawns.json
resources/: coffin.xp  coffin2.xp  joumey.xp  temple.xp  tomb2.xp  zach.xp
src/: animal_ai_system.rs  camera.rs  components.rs  damage_system.rs  encumbrance_system.rs  gamesystem.rs  gui.rs  hunger_system.rs  inventory_system.rs  main.rs  map.rs  melee_combat_system.rs  monster_ai_system.rs  particle_system.rs  player.rs  rect.rs  rex_assets.rs  saveload_system.rs  spawner.rs  trigger_system.rs  visibility_system.rs
src/ai/: adjacent_ai_system.rs  animal_ai_system.rs  approach_ai_system.rs  bystander_ai_system.rs  chase_ai_system.rs  default_move_system.rs  flee_ai_system.rs  initiative_system.rs  mod.rs  monster_ai_system.rs  quip_system.rs  turn_status.rs  visible_ai_system.rs
src/map/: dungeon.rs  mod.rs  themes.rs  tiletype.rs
src/map_builders/: bsp_dungeon.rs  bsp_interior.rs  cellular_automata.rs  common.rs  dla.rs  door_placement.rs  drunkard.rs  forest.rs  maze.rs  mod.rs  room_draw.rs  simple_map.rs  town.rs  voronoi.rs
src/map_builders/prefab_builder/: mod.rs  prefab_levels.rs  prefab_rooms.rs  prefab_sections.rs
src/map_builders/waveform_collapse/: constraints.rs  image_loader.rs  mod.rs
src/raws/: mob_structs.rs  mod.rs  rawmaster.rs
src/spatial/: mod.rs
wasm/: feathers-and-glass.js  feathers-and-glass.wasm  feathers-and-glass_bg.wasm  index.html  myblob.js  myblob_bg.wasm
