[package]
name = "feathers-and-glass"
version = "0.1.0"
authors = ["Jack Kellenberger"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = { version = "0.8.7", features = ["serde"],  git = "https://github.com/amethyst/bracket-lib.git"}
specs = { version = "0.16.1", features = ["serde"] }
specs-derive = "0.4.1"
serde= { version = "1.0.93", features = ["derive"] }
serde_json = "1.0.39"
lazy_static = "1.4.0"
regex = "1.3.6"
crossbeam-utils = "0.8.7"